--- a/FollowMe/Content/Site.css
+++ b/FollowMe/Content/Site.css
@@ -22,3 +22,21 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* Bootstrap overrides */
+.navbar {
+  min-height: 100px;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+ padding-top: 40px;
+}
+
+.navbar-inverse .navbar-brand {
+ padding-top: 40px;
+}
+
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
