--- a/FollowMe/Views/Shared/_Layout.cshtml
+++ b/FollowMe/Views/Shared/_Layout.cshtml
@@ -17,21 +17,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("FollowMe.com", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Marketplace", "Marketplace", "Home")</li>
+                    <li>@Html.ActionLink("Subscriptions", "Subscriptions", "Home")</li>
+                    <li>@Html.ActionLink("Streaming Now", "StreamingNow", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-full">
         @RenderBody()
         <hr />
+    </div>
+    <div class="container-full body-content">
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
